--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,94 @@
 body {
   font-family: "Roboto", sans-serif;
 }
+
+.alert-container {
+}
+
+.callout-container {
+  height: 100vh;
+
+  background: url("../images/whiskey-background.jpg") no-repeat center center
+    fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: relative;
+}
+
+.features-container {
+}
+
+.opaque-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.quotes-container {
+}
+
+/*Block divider*/
+.block-divider {
+  width: 75px;
+  height: 5px;
+  border: 0;
+  background-color: #444;
+}
+
+.block-divider--orange {
+  background-color: #f05f40;
+}
+
+.block-divider--short {
+  width: 35px;
+}
+
+/*Jumbotron*/
+
+.jumbotron {
+  background-color: transparent;
+}
+
+.jumbotron .lead {
+  color: #a7a7a7;
+  margin: 25px 0;
+}
+
+.jumbotron-header {
+  color: white;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+/* Buttons */
+
+.btn--cta {
+  font-weight: bold;
+  border-radius: 23px;
+  width: 160px;
+}
+
+.btn--red {
+  color: white;
+  background-color: #f05f40;
+  border-color: #f05f40;
+}
+
+.btn--red:hover,
+.btn--red:active,
+.btn--red:focus,
+.btn--red:active:focus {
+  background-color: #df4929;
+  border-color: #df4929;
+  color: white;
+}
