--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,17 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.alert-container {
+.alert-container .col-12 {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.site-wide-alert {
+  border-radius: 0;
+  margin-bottom: 0;
+  padding: 5px 15px;
+  background-color: #eec802;
+  border-color: #eec802;
 }
 
 .callout-container {
@@ -24,6 +34,8 @@ body {
 
 .features-container {
 }
+
+/*Page headers*/
 
 .opaque-overlay {
   position: absolute;
@@ -51,6 +63,31 @@ body {
 
 .block-divider--short {
   width: 35px;
+}
+
+/*Navbar*/
+.navalert-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+.navbar {
+  margin-bottom: 0;
+  border: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index: 1;
+}
+.navbar .navbar-toggler {
+  border: 0;
+}
+.navbar-brand {
+  font-weight: bold;
+}
+.navbar .navbar-nav a {
+  font-weight: bold;
 }
 
 /*Jumbotron*/
